[package]
name = "procedural-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello-world-macro = { path = "./hello-world-macro" }
make-public-macro = { path = "./make-public-macro" }
private-macro = { path = "./private-macro" }
compose-macro = { path = "./compose-macro" }
hello-world-func-macro = { path = "./hello-world-func-macro" }
panic-to-result-macro = { path = "./panic-to-result-macro" }
analyze-macro = { path = "./analyze-macro" }
